<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TesterDashboard!</string>
    <string name="app_name">TCPNetworkTester</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh">Refresh</string>
    <string name="send">StartSend</string>
    <string name="stop">StopSend</string>
    <string name="http">ResetCounter</string>
    <string name="device_id">13403</string>
    <string name="server_ip_1">10.64.50.209</string>
    <string name="server_ip">119.205.221.76</string>
    <string name="server_port">11001</string>
</resources>
