<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<TextView 
		android:text="Android TCP TestClient v1.0" 
		android:id="@+id/textView1" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" android:gravity="center" 
		android:paddingTop="10px" android:paddingBottom="10px"
		android:textSize="20sp"/>
		
	<LinearLayout
		android:id="@+id/linearLayout1" 
		android:layout_width="fill_parent" 
		android:layout_height="35sp">
    
	    <Button 
	    	android:layout_height="fill_parent" 
	    	android:id="@+id/btnConnect" 
	    	android:layout_width="wrap_content" 
	    	android:text="@string/connect" android:layout_weight="1"/>
	    	
	    <Button 
	    	android:layout_height="fill_parent" 
	    	android:id="@+id/btnDisconnect" 
	    	android:layout_width="wrap_content" android:text="@string/disconnect" android:layout_weight="1"/>
	    	
	    <Button 
	    	android:text="@string/refresh" 
	    	android:layout_height="fill_parent" 
	    	android:id="@+id/btnRefresh" 
	    	android:layout_width="wrap_content" android:layout_weight="1"/>
	</LinearLayout>
	
	<LinearLayout android:id="@+id/linearLayout2" android:layout_width="fill_parent" android:layout_height="35sp">
		<Button android:text="@string/send" android:id="@+id/btnSend" android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="fill_parent"></Button>
		<Button android:text="@string/stop" android:id="@+id/btnStop" android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="fill_parent"></Button>
		<Button android:text="@string/http" android:id="@+id/btnHttp" android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="fill_parent"></Button>
	</LinearLayout>
	
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="40sp">
		<EditText android:id="@+id/sendPeriod" android:maxLength="10" android:text="1000" android:layout_width="100dp" android:layout_height="fill_parent"></EditText>
		<TextView android:layout_width="wrap_content" android:text="(ms)" android:layout_height="fill_parent" android:id="@+id/textView2"></TextView>
		<EditText android:id="@+id/packetLength" android:maxLength="10" android:text="1024" android:layout_width="100dp" android:layout_height="fill_parent"></EditText>
		<TextView android:layout_width="wrap_content" android:text="(bytes)" android:layout_height="fill_parent" android:id="@+id/textView3"></TextView>
	</LinearLayout>
		
		
	<TextView 
		android:text="-----------------------------------" 
		android:gravity="center" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent"
		android:paddingBottom="5px" android:paddingTop="5px" />
	
	<TextView 
		android:text="Network Status Information" 
		android:id="@+id/textView5" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" android:gravity="center" 
		android:paddingBottom="5px" android:paddingTop="5px" android:textSize="20sp"/>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView 
			android:text="[WiFi/3G] : " 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
		<TextView 
		android:text="3G" 
		android:id="@+id/wifi3g" 
		android:layout_height="wrap_content" android:layout_width="fill_parent"/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView 
			android:text="[Availability] : " 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
		<TextView 
		android:text="Unavailable" 
		android:id="@+id/isAvailable" 
		android:layout_height="wrap_content" android:layout_width="fill_parent"/>
	</LinearLayout>
	<LinearLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">	
		<TextView 
			android:text="[TCP Connection] : " 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>	
		<TextView 
			android:text="DISCONNECTED" 
			android:id="@+id/isConnected" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
	<TextView 
		android:text="[Device IP Address] : " 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>
	<TextView
		android:id="@+id/ipAddr"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="0.0.0.0"/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	<TextView 
		android:text="[Socket IP Address] : " 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>
	<TextView
		android:id="@+id/socketIpAddr"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="0.0.0.0"/>
	</LinearLayout>
	
	<TextView 
		android:text="-----------------------------------" 
		android:gravity="center" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent"
		android:paddingBottom="5px" android:paddingTop="5px" />
	
	<TextView 
	android:text="Tx/Rx Statistics" 
	android:id="@+id/textView4" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content" android:gravity="center" 
	android:paddingBottom="10px" android:paddingTop="10px" android:textSize="20sp"/>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView 
			android:text="[TX] : " 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
		<TextView 
		android:text="0" 
		android:id="@+id/txStat" 
		android:layout_height="wrap_content" android:layout_width="fill_parent"/>
	</LinearLayout>
	
	<LinearLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">	
		<TextView 
			android:text="[RX] : " 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>	
		<TextView 
			android:text="0" 
			android:id="@+id/rxStat" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">	
		<TextView 
			android:id="@+id/minMaxAvg" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>	
	</LinearLayout>
</LinearLayout>
